# lccfq-hwman

./: Makefile  README.md  pyproject.toml
configs/: parameter_manager-parameter_manager.json  serverConfig.yml
hwman/: cli.py  main.py
hwman/client/: __init__.py  client.py
hwman/grpc/protobufs/: health.proto  test.proto
hwman/grpc/protobufs_compiled/: health_pb2.py  health_pb2_grpc.py  test_pb2.py  test_pb2_grpc.py
hwman/services/: health.py  my_experiment_setup.py  tests.py
scripts/: testy_test.py
