[project]
name = "lccfq-hwman"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "Santiago Nuñez-Corrales", email = "nunezco2@illinois.edu"},
    {name = "Marcos Frenkel", email = "marcosf2@illinois.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "grpcio-tools>=1.71.0",
    "h5py>=3.13.0",
    "labcore",
    "pandas>=2.2.3",
    "typer>=0.15.0",
    "xarray>=2025.4.0",
    "cryptography>=44.0.0",
    "qtpy>=2.4.3",
    "zmq>=0.0.0",
    "qcodes>=0.53.0",
    "pyqt5>=5.15.11",
    "instrumentserver",
    "pyro4>=4.82",
    "python-dotenv>=1.1.0",
    "qcui_measurement",
    "qick"
]

[project.scripts]
hwman = "hwman.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hwman*"]
exclude = ["certs*"]

[tool.uv.sources]
labcore = { git = "https://github.com/toolsforexperiments/labcore" }
instrumentserver = { path = "../instrumentserver", editable = true }
qcui_measurement = { path = "../measurement", editable = true }
qick = { path = "../qick", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.10",
]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# Ignore missing imports for external libraries and generated protobuf files
[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.protobuf.*"
ignore_missing_imports = true

# Ignore all generated protobuf files
[[tool.mypy.overrides]]
module = "hwman.grpc.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "hwman.grpc.protobufs_compiled.*"
ignore_errors = true

[tool.ruff]
# Exclude directories from ruff linting
exclude = [
    "hwman/grpc/protobufs_compiled/",  # Generated protobuf files
    ".venv/",
    ".mypy_cache/",
    ".ruff_cache/",
    ".git/",
    ".idea/",
]
